# ydnatl

./: .gitignore  README.md  main.py  pyproject.toml  run_tests.py
.github/workflows/: publishing.yml  python-package.yml  test.yml
core/: component.py  tag.py
src/: benchmark_render_c.py
src/ydnatl/: __init__.py
src/ydnatl/core/: css.py  element.py  factory.py  meta.py  partial.py  tag.py
src/ydnatl/core/cycode/: cython_render.c  cython_render.pyx  setup.py
src/ydnatl/tags/: form.py  html.py  layout.py  lists.py  media.py  meta.py  table.py  text.py  ui.py
src/ydnatl/tests/: test_element.py  test_html.py
src/ydnatl_sn/core/: page.py  tag.py
src/ydnatl_sn/tags/: html.py  layout.py  table.py  text.py  ui.py
tags/: html.py  layout.py  lists.py  table.py  text.py  ui.py
tests/: test_element.py  test_html_tags.py  test_layout_tags.py  test_list_tags.py  test_table_tags.py  test_text_tags.py  test_ui_tags.py  tests.py
