[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ydnatl_sn"
version = "0.0.8"
authors = [
  { name="Sean Nieuwoudt", email="sean@underwulf.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sn/ydnatl"
Issues = "https://github.com/sn/ydnatl/issues"